# hilfmir

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile-with-chef  README.md  cliff.toml  data.js  data.json  data2.json  justfile  reply_to_msg.js
.github/workflows/: rust.yml
src/: auth.rs  commands.rs  config.rs  error.rs  lib.rs  main.rs  translate.rs  webhook.rs
