[package]
name = "hilfmir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
google-translate2 = "*"
# hyper = "0.14"
# hyper-rustls = "0.23.1"
log = "0.4"
pretty_env_logger = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = "^1.0"
serde_json = "^1.0"
teloxide = { version = "0.11", features = ["macros"] }
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
