[package]
name = "hilfmir"
version = "0.1.0"
edition = "2021"
authors = ["Evgeny Roskach <e.roskach@gmail.com>"]
description = "A Telegram bot built with Teloxide that translates messages with Google Translate"
keywords = ["telegram", "bot", "app", "teloxide", "translate"]
categories = ["Web programming::WebSocket"]
repository = "https://github.com/genyrosk/hilfmir"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
reqwest = { version = "0.11", features = ["json"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = "^1.0"
serde_json = "^1.0"
teloxide = { version = "0.11", features = ["macros"] }
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
toml = "0.5.9"

# Use vendored openssl. We don't depend on it directly.
openssl = { version = "0.10.41", features = ["vendored"], optional = true }


[dev-dependencies]
clippy = { version = "*" }


[features]
vendored-openssl = ["openssl"]
